# TCC

./: .gitignore  .pre-commit-config.yaml  Makefile  pyproject.toml
.devcontainer/: devcontainer.json  postInstallScript.sh
bnn_analysis/: __init__.py  __main__.py  utils.py
bnn_analysis/base/: __init__.py  activations.py  benchmark.py  bit_mlp.py  constraints.py  experiment.py  layers.py  mlp.py  preprocess.py  reinforcement.py  supervised.py  trainer.py
bnn_analysis/cpp/: bnn.cpp  nn.cpp
bnn_analysis/experiment/: benchmark.py  benchmark_cpp.py  benchmark_sklearn.py  cartpole.py  cartpole_bnn.py  housing.py  housing_bnn.py  iris.py  iris_bnn.py  lunarlander.py  lunarlander_bnn.py  mnist.py  mnist_bnn.py  reinforcement.py  supervised.py
bnn_analysis/supervised/: __init__.py  iris.py  iris_bnn.py
config/: benchmark.yaml  benchmark_cpp.yaml  benchmark_sklearn.yaml  cartpole.yaml  cartpole_bnn.yaml  housing.yaml  housing_bnn.yaml  iris.yaml  iris_bnn.yaml  lunarlander.yaml  lunarlander_bnn.yaml  mnist.yaml  mnist_bnn.yaml
config/experiment/cartpole/: 16x16.yaml  nohidden.yaml
config/experiment/cartpole_bnn/: 16x16.yaml  nohidden.yaml
config/experiment/housing/: 100x100.yaml  4x4x4x4.yaml  8x8x8x8.yaml
config/experiment/housing_bnn/: 2bit100x100.yaml  2bit16x16x16x16.yaml  2bit4x4x4x4.yaml  2bit4x4x4x4poly_lr.yaml  2bit8x8x8x8.yaml
config/experiment/iris/: 4x4x4.yaml
config/experiment/iris_bnn/: 2bit4x4x4.yaml  2bit8x8x8.yaml  8x8x8.yaml
config/experiment/lunarlander/: 20.yaml  nohidden.yaml
config/experiment/lunarlander_bnn/: 20.yaml  nohidden.yaml
config/experiment/mnist/: 128.yaml  32.yaml  512.yaml
config/experiment/mnist_bnn/: 128.yaml  32.yaml  (+1 more)
notebooks/: benchmark.ipynb
notebooks/data/: benchmark.csv  benchmark_cpp.csv  benchmark_cpp_opt.csv  benchmark_sklearn.csv
playground/: boston_outlier.ipynb  cartpole_env.py  hydra.yaml  hydra_instantiate.py  kbit-discretization.ipynb  lr.ipynb  pygad_regression.py
playground/.ipynb_checkpoints/: boston_outlier-checkpoint.ipynb
